--- a/pure.css
+++ b/pure.css
@@ -79,8 +79,9 @@ animation: city 20s linear infinite;
 }
 .car
 {
-width: 400px;
-left: 50%;
+width: 430px;
+height: 275px;
+left: 49%;
 right: 0;
 bottom: 100px;
 z-index: 1;
@@ -125,12 +126,12 @@ z-index: 2;
 }
 .back-wheel
 {
-    left: -205px;
+    left: -202px;
     position: absolute;
 }
 .front-wheel
 {
-    left: 40px;
+    left: 15px;
     position: absolute;
 }
 @keyframes wheel
